crates/xabi/tests/ui/unsupported_shapes/trait_tuple_payload.rs
#[xabi::xabi(id = "xabi.test.Bad", version = 1)]
pub trait Bad {
    fn values(&self) -> xabi::Result<(u32, u32)>;
}

fn main() {}
